--- a/src/ui/components/Button/Button.module.css
+++ b/src/ui/components/Button/Button.module.css
@@ -20,6 +20,18 @@
   transform: scale(0.95);
 }
 
-/** TODO: Create separate styles for .primary and .secondary variants of this button:
-* - Must use the CSS variables declared in App.css
-*/
+.primary {
+  background-color: var(--color-brand);
+  border: 2px solid var(--color-brand);
+}
+
+.secondary {
+  background-color: transparent;
+  border: 2px solid var(--color-brand);
+  color: var(--color-brand);
+}
+
+.secondary:hover {
+  background-color: var(--color-brand);
+  color: white;
+}
